--- a/src/output.css
+++ b/src/output.css
@@ -544,17 +544,16 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.block {
+  display: block;
+}
+
 .h-screen {
   height: 100vh;
 }
 
 .w-screen {
   width: 100vw;
-}
-
-.max-w-max {
-  max-width: -moz-max-content;
-  max-width: max-content;
 }
 
 .bg-slate-900 {
